<?xml version="1.0"?>
<package format="3">
  <name>dijkstra_global_planner</name>
  <version>0.0.0</version>
  <description>The dijkstra_global_planner package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <build_depend>amsl_navigation_msgs</build_depend>

  <export>
  </export>
</package>
